--- a/ragge.xyz/_config.yml
+++ b/ragge.xyz/_config.yml
@@ -18,13 +18,24 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: ragge.xyz
+title: raggebatman
 email: me@ragge.xyz
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-github_username:  raggebatman
+author: raggebatman
+
+description: >-
+  Hi! I'm Ragge, an AV programmer. This is my website.
+
+socials:
+  - github:
+    - handle: '@raggebatman'
+    - url: https://github.com/raggebatman
+  - mastodon:
+    - handle: '@ragge@hachyderm.io'
+    - url: https://hachyderm.io/@ragge
+  - revolt:
+    - handle: '@raggebatman'
+    - url: https://app.revolt.chat
+
 repository_link: https://github.com/raggebatman/website
 
 # Build settings
