update repo link

--- a/library.ragge.xyz/nanoc.yaml
+++ b/library.ragge.xyz/nanoc.yaml
@@ -14,4 +14,4 @@ site:
   title: 'The Library'
   description: 'The Library is a website where I share content of interest for educational purposes.'
   author: 'raggebatman'
-  source: 'https://github.com/raggebatman/website/library.ragge.xyz'
+  source: 'https://github.com/raggebatman/website'
