--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "framework": null,
     "installCommand": null,
     "buildCommand": null,
-    "outputDirectory": "www",
+    "outputDirectory": "public",
     "cleanUrls": true,
     "trailingSlash": false
 }
